# rtsan-standalone-rs

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  build.rs  supported-targets.txt  taplo.toml
.github/workflows/: build-verification.yml  check.yml  compatibility.yml  nostd.yml  quality.yml  scheduled.yml  targets.yml  test.yml  tests.yml
benches/: rtsan-bench.rs
crates/rtsan/: Cargo.toml
crates/rtsan-macros/: Cargo.toml
crates/rtsan-macros/src/: lib.rs
crates/rtsan-standalone-macros/: Cargo.toml
crates/rtsan-standalone-macros/src/: lib.rs
crates/rtsan-standalone-sys/: Cargo.toml  README.md  build.rs
crates/rtsan-standalone-sys/src/: lib.rs
crates/rtsan-sys/: Cargo.toml  README.md  build.rs
crates/rtsan-sys/lib/aarch64-apple-darwin/: libclang_rt.rtsan_osx_dynamic.dylib
detection-tests/: README.md
detection-tests/examples/: integration-example.rs  simple.rs
example/: Cargo.toml
example/src/: main.rs
examples/: disabled_scope.rs  manual_blocking.rs  mutex.rs  scoped_disabler.rs  vector.rs
examples/integration-example/: Cargo.toml  README.md
examples/integration-example/src/: main.rs
rtsan-macros/: Cargo.toml
rtsan-macros/src/: lib.rs
rtsan-standalone-sys/: Cargo.toml  README.md  build.rs
rtsan-sys/: Cargo.toml  build.rs
rtsan-sys/src/: lib.rs
src/: lib.rs  std.rs  sync.rs
tests/: detection-tests.rs  detection.rs  detection_tests.rs  rtsan-macros.rs  violations.rs
tests/detection/: Cargo.toml
tests/detection-tests/: Cargo.toml
tests/detection-tests/examples/: simple.rs
tests/detection/examples/: integration-example.rs
