[workspace]
resolver = "2"
members = ["crates/rtsan-standalone-sys", "examples/integration-example"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
authors = ["Stephan Eckes <stephan@neodsp.com>"]
license = "Apache-2.0"
repository = "https://github.com/realtime-sanitizer/rtsan-standalone-rs"
readme = "README.md"

[workspace.dependencies]
rtsan-standalone = { path = "." }
rtsan-standalone-macros = { path = "crates/rtsan-standalone-macros" }
rtsan-standalone-sys = { path = "crates/rtsan-standalone-sys" }

[package]
name = "rtsan-standalone"
description = "A Rust wrapper for RTSan standalone"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
rtsan-standalone-macros = { workspace = true }
rtsan-standalone-sys = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
enable = ["rtsan-standalone-macros/enable", "rtsan-standalone-sys"]

[[bench]]
name = "rtsan-bench"
harness = false
