[workspace]
members = ["crates/rtsan-standalone-sys", "examples/integration-example"]
resolver = "2"

[workspace.package]
authors = ["Stephan Eckes <stephan@neodsp.com>"]
categories = ["development-tools"]
edition = "2021"
keywords = ["sanitizer", "real-time", "audio", "aerospace", "robotics"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/realtime-sanitizer/rtsan-standalone-rs"
rust-version = "1.64.0"
version = "0.1.0"

[workspace.dependencies]
rtsan-standalone = { path = "." }
rtsan-standalone-macros = { version = "0.1.0", path = "crates/rtsan-standalone-macros" }
rtsan-standalone-sys = { version = "0.1.0", path = "crates/rtsan-standalone-sys" }

[package]
authors.workspace = true
categories.workspace = true
description = "A Rust wrapper for RTSan standalone"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rtsan-standalone"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rtsan-standalone-macros = { workspace = true }
rtsan-standalone-sys = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
enable = ["rtsan-standalone-macros/enable", "rtsan-standalone-sys"]

[[bench]]
name = "rtsan-bench"
harness = false
