[package]
authors.workspace = true
categories.workspace = true
description = "Macro crate for RTSan standalone"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rtsan-standalone-macros"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
