[package]
authors.workspace = true
categories.workspace = true
description = "Unsafe Rust bindings for RTSan standalone library"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rtsan-standalone-sys"
repository.workspace = true
rust-version.workspace = true
version = "0.1.1"

[features]
prebuilt-libs = []

[build-dependencies]
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3"
