[package]
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "integration-example"
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
rtsan-standalone = { workspace = true }

[features]
rtsan = ["rtsan-standalone/enable"]
